# telegram_usd_rate_bot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py  settings.py
